cmake_minimum_required(VERSION 3.15)
project(CSE-114-Projects C)  # Specify C as the language

add_executable(main main.c)
add_executable(hello_world hello_world.c)
add_executable(miles_to_km miles-to-km.c)
add_executable(f_to_c f_to_c.c)
add_executable(c_to_f c_to_f.c)
add_executable(f_to_c2 f_to_c2.c)
add_executable(epp epp.c)
add_executable(epp2 epp2.c)
add_executable(char_counter char_counter.c)
add_executable(blank_tab_new_line blank_tab_new_line.c)
add_executable(single_blank single_blank.c)
add_executable(capital_small_letter capital_small_letter.c)
add_executable(labwork-1-1 labwork-1-1.c)
add_executable(letter_grades letter_grades.c)
add_executable(lw3 lw3.c)
add_executable(hw1 hw1.c)
add_executable(lw3-b lw3-b.c)
add_executable(lw3-c lw3-c.c)
add_executable(lw3-d lw3-d.c)